...
        phoneNumberField.keyboardType = UIKeyboardType.numberPad
        
        // Set up navigation bar
        self.navigationController?.navigationBar.setBackgroundImage(UIImage(), for: .default)
        self.navigationController?.navigationBar.shadowImage = UIImage()
        
        let backButton = UIBarButtonItem(image: UIImage(named: "close"), style: .plain, target: navigationController, action: #selector(UINavigationController.popViewController(animated:)))
        self.navigationItem.leftBarButtonItem = backButton
        self.navigationItem.leftBarButtonItem?.tintColor = textColor
        self.navigationController?.interactivePopGestureRecognizer?.delegate = self as? UIGestureRecognizerDelegate
    }
    
    override func touchesBegan(_ touches: Set<UITouch>, with event: UIEvent?) {
...
        let email = registerUsernameField.text!
        let password = registerPasswordField.text!
        let phoneNumber = phoneNumberField.text!
        Authorization.instance.register(fullName: fullName, email: email, password: password, phoneNumber: phoneNumber) { (errMsg, data) in
            guard errMsg == nil else{
                let alert = UIAlertController(title: "Error Authentication", message: errMsg, preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
                self.present(alert, animated: true, completion: nil)
                return
            }
            let alertController = UIAlertController(title: "Register", message: "Registered!", preferredStyle: UIAlertController.Style.alert)
            alertController.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: { _ -> Void in
                let loginView = self.storyboard?.instantiateViewController(withIdentifier: "Login")
...
